# nnUNet_cust

./: .gitignore  CLAUDE.md  STATUS.md  WORKSPACE.md  convent_totalseg_v1_to_nnunet.sh  convert_task601_fixed.sh  convert_task601_unfixed.sh  convert_totalseg_v1_grouped.py  convert_totalseg_v1_to_nnunet.py  convert_totalseg_v1_to_nnunet_multiwindow.py  demo_grouped_pipeline.py  fuse.py  fuse_group_predictions.py  main.py  pyproject.toml  train_task601_round1.sh
agent/: apply_tuning_decision.py  autotuning_orchestrator.py
agent/doc/: autotuning_orchestrator_guide.md  checked_hyperparameters.json  hyperparameter_reference.json  hyperparameter_reference_round_1.json  hyperparameter_reference_round_2.json  parameter_constraints.json  tuning_decision_task601_round1.json  tuning_decision_task601_round2.json  tuning_decision_task601_round3.json
agent/prompts/: agent-hp-checker.md  agent-hp-finder.md  agent-training-launcher.md  agent_hp-autotuning.md
agent/prompts/setup/: agent-hp-checker.md
agent/prompts/training-loop/: agent-modify-hy.md  agent-training-launcher.md  (+1 more)
agent/round_2/: train_task601_round2.sh
documentation/: hyperparameter_reference.json  hyperparameter_reference.md  hyperparameter_reference_round_1.json  hyperparameter_reference_round_2.json  tuning_decision_task601_round2.json
nnunet/run/: load_pretrained_weights.py
scripts/: 00_setup.sh  00_setup_mini_dataset.py  01_convert_grouped.slurm  01_convert_multiwindow.slurm  01_convert_task601_fixed.slurm  01_convert_task601_unfixed.slurm  01_preprocess.slurm  01_preprocess_604.slurm  01_preprocess_grouped.slurm  01_preprocess_mini.slurm  01b_unpack_601.slurm  02_train.sh  02_train.slurm  02_train_601.slurm  02_train_fast.slurm  02_train_grouped.slurm  02_train_mini.sh  02_train_mini.slurm  03_validate.sh  03_validate.slurm  03_validate_fast.slurm  03_validate_grouped.slurm  03_validate_mini.sh  03_validate_mini.slurm  04_find_best.slurm  04_fuse_grouped.slurm  05_evaluate_fused_cv.slurm  06_predict_test_grouped.slurm  06_predict_test_unfixed.slurm  07_ensemble_test.slurm  07_ensemble_test_softmax.slurm  07_predict_ensemble_fuse_test.sh  08_fuse_test.slurm  08_fuse_test_method_A.slurm  09_b300.slurm  09_fuse_and_eval_method_A.slurm  10_eval_task612_only.slurm  11_eval_task614_only.slurm  12_train_classbalanced.slurm  13_predict_test_601.slurm  (+8 more)
tests/: test_nnUNetTrainerV2_configurable.py
(+32 files in other folders)
