[project]
name = "nnunet-cust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=1.6.0",
    "tqdm",
    "dicom2nifti",
    "scikit-image>=0.14",
    "medpy",
    "scipy",
    "batchgenerators>=0.23",
    "numpy",
    "scikit-learn",
    "SimpleITK",
    "pandas",
    "requests",
    "nibabel>=5.3.3",
    "tifffile",
    "matplotlib",
]

[project.scripts]
nnUNet_convert_decathlon_task = "nnunet.experiment_planning.nnUNet_convert_decathlon_task:main"
nnUNet_plan_and_preprocess = "nnunet.experiment_planning.nnUNet_plan_and_preprocess:main"
nnUNet_train = "nnunet.run.run_training:main"
nnUNet_train_DP = "nnunet.run.run_training_DP:main"
nnUNet_train_DDP = "nnunet.run.run_training_DDP:main"
nnUNet_predict = "nnunet.inference.predict_simple:main"
nnUNet_ensemble = "nnunet.inference.ensemble_predictions:main"
nnUNet_find_best_configuration = "nnunet.evaluation.model_selection.figure_out_what_to_submit:main"
nnUNet_print_available_pretrained_models = "nnunet.inference.pretrained_models.download_pretrained_model:print_available_pretrained_models"
nnUNet_print_pretrained_model_info = "nnunet.inference.pretrained_models.download_pretrained_model:print_pretrained_model_requirements"
nnUNet_download_pretrained_model = "nnunet.inference.pretrained_models.download_pretrained_model:download_by_name"
nnUNet_download_pretrained_model_by_url = "nnunet.inference.pretrained_models.download_pretrained_model:download_by_url"
nnUNet_determine_postprocessing = "nnunet.postprocessing.consolidate_postprocessing_simple:main"
nnUNet_export_model_to_zip = "nnunet.inference.pretrained_models.collect_pretrained_models:export_entry_point"
nnUNet_install_pretrained_model_from_zip = "nnunet.inference.pretrained_models.download_pretrained_model:install_from_zip_entry_point"
nnUNet_change_trainer_class = "nnunet.inference.change_trainer:main"
nnUNet_evaluate_folder = "nnunet.evaluation.evaluator:nnunet_evaluate_folder"
nnUNet_plot_task_pngs = "nnunet.utilities.overlay_plots:entry_point_generate_overlay"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nnunet"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
